--- a/cite.html
+++ b/cite.html
@@ -21,10 +21,10 @@
             <input type="checkbox" id="menu-bar">
             <label class="icon-menu" for="menu-bar"></label>
             <nav class="menu">
-                    <a href="Pagina HTML.html">Text-Shadow</a>
-                    <a href="tabla.html">Table</a>
-                    <a href="inpunt.html">Inpunt</a>
-                    <a href="cite.html">Cite</a>
+                <a href="Pagina HTML.html">Text-Shadow</a>
+                <a href="tabla.html">Table</a>
+                <a href="inpunt.html">Inpunt</a>
+                <a href="cite.html">Cite</a>
             </nav>
         </div>
     </header>
@@ -38,15 +38,15 @@
                     Markup Language, es decir, Lenguaje de Marcas de Hipertexto”</p>
                     <a href="https://codigofacilito.com/articulos/que-es-html" target="_blank">Leer mas</a>
         </section>
-            </di>
+             </div>
             <section id="blog">
-                <h5>Table</h5>
-                <img id="imagen4" src="4.PNG">
-                <p>Cada fila de la tabla se define con la etiqueta "tr" . Un encabezado de tabla se
-                     define con la etiqueta "th" . Por defecto, los encabezados de las tablas están en 
-                     negrita y centrados. Una tabla de datos / celda se define con la etiqueta "td" .</p>
+                <h5>INPUNT</h5>
+                <p><cite>The Scream</cite> by Edward Munch. Painted in 1893.</p>
+                <p>La etiqueta "cite" define el título de una obra (por ejemplo, un libro, 
+                    una canción, una película, un programa de televisión, una pintura, una 
+                    escultura, etc.).</p>
                     <article>
-                        <img src="3.PNG">
+                        <img src="7.PNG">
                         <h4> ejemplo de codigo</h4>
                     </article>
             </section>
