--- a/inpunt.html
+++ b/inpunt.html
@@ -21,10 +21,10 @@
             <input type="checkbox" id="menu-bar">
             <label class="icon-menu" for="menu-bar"></label>
             <nav class="menu">
-                <a href="file:///C:/Users/Usuario/Desktop/Pagina%20html/Pagina%20HTML.html">Text-Shadow</a>
-                <a href="file:///C:/Users/Usuario/Desktop/Pagina%20html/tabla.html">Table</a>
-                <a href="file:///C:/Users/Usuario/Desktop/Pagina%20html/inpunt.html">Inpunt</a>
-                <a href="">Cite</a>
+                    <a href="Pagina HTML.html">Text-Shadow</a>
+                    <a href="tabla.html">Table</a>
+                    <a href="inpunt.html">Inpunt</a>
+                    <a href="cite.html">Cite</a>
             </nav>
         </div>
     </header>
